tests/baselines/reference/computedPropertyNames26_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames26_ES5.ts(9,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames26_ES5.ts(10,11): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/computedProperties/computedPropertyNames26_ES5.ts(10,12): error TS2466: 'super' cannot be referenced in a computed property name.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames26_ES5.ts (3 errors) ====
    class Base {
        bar() {
            return 0;
        }
    }
    class C extends Base {
        // Gets emitted as super, not _super, which is consistent with
        // use of super in static properties initializers.
        [
        ~
            { [super.bar()]: 1 }[0]
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
              ~~~~~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
               ~~~~~
!!! error TS2466: 'super' cannot be referenced in a computed property name.
        ]() { }
    ~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
    }